fixing issue with custom font on mobile devices

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: luminari;
-  src: url(fonts/Luminari-Regular.ttf);
+  src: url("fonts/Luminari-Regular.ttf");
 }
 
 
@@ -52,15 +52,6 @@ header {
 .nav-title {
   color: #000;
 }
-
-/* .nav-logo span {
-  color: #000;
-  font-size: 2rem;
-  font-weight: 100;
-  font-family: luminari;
-  letter-spacing: 2px;
-  transition: 0.6s;
-} */
 
 .nav-menu {
   position: relative;
@@ -250,7 +241,6 @@ header .nav-menu .nav-item a:hover {
 
 
 @media screen and (min-width: 1900px) {
-  
   .nav-logo {
     font-weight: 300;
     font-size: 2.9rem;
